Improve usability for editor components => disable Resizables when elements are collapsed; reset elements to min width/height values when removing collapsed status; improve scrolling behaviour for editor-filebrowser (avoid double scrollbars)

--- a/src/main/webapp/content/scss/editor.scss
+++ b/src/main/webapp/content/scss/editor.scss
@@ -10,8 +10,8 @@ body.editor .ribbon {
     display: none;
 }
 
-
-.editor-wrapper, div.editor {
+.editor-wrapper,
+div.editor {
     height: 100%;
 }
 body {
@@ -100,7 +100,6 @@ body {
     overflow-y: hidden;
 }
 
-
 .editor-wrapper .navbar-right span {
     margin-right: 10px;
 }
@@ -115,7 +114,7 @@ body {
         margin-bottom: 0;
     }
 }
-.card-header[role="button"] {
+.card-header[role='button'] {
     cursor: pointer;
 }
 
@@ -148,7 +147,7 @@ body.editor .navbar-brand span {
 }
 
 .buildoutput {
-    font-family: Menlo,Monaco,"Courier New",monospace;
+    font-family: Menlo, Monaco, 'Courier New', monospace;
     font-size: 11px;
     overflow: hidden;
     margin: 0;
@@ -204,31 +203,30 @@ File browser styles
 ========================================================================== */
 
 .treeview-container {
-
     overflow-y: scroll;
 
     .treeview-item {
         cursor: pointer;
 
         .list-group-item {
-            padding: .75rem 1.25rem;
+            padding: 0.75rem 1.25rem;
             margin-bottom: -1px;
             border: none;
         }
 
         .list-group-item:hover {
-            background-color: #F5F5F5;
+            background-color: #f5f5f5;
         }
     }
 }
 
 .node-selected {
-    color: #FFFFFF;
+    color: #ffffff;
     background-color: #428bca !important;
 }
 
-.resizable-filebrowser > .card-body {
-    padding: 1.25rem 0 1.25rem 0;
+.resizable-filebrowser .card-body {
+    padding: 1rem 0.5rem 1rem 0.5rem;
 }
 
 /* ==========================================================================
@@ -237,11 +235,11 @@ Required for resize-element-handler
 ========================================================================== */
 
 .resizable {
-    position: relative
+    position: relative;
 }
 
 .resizable.no-transition {
-    transition: none!important
+    transition: none !important;
 }
 
 .rg-bottom,
@@ -258,7 +256,7 @@ Required for resize-element-handler
     -ms-user-select: none;
     -webkit-user-select: none;
     user-select: none;
-    background: 0 0
+    background: 0 0;
 }
 
 .rg-bottom span,
@@ -268,7 +266,7 @@ Required for resize-element-handler
     position: absolute;
     box-sizing: border-box;
     display: block;
-    border: 1px solid #ccc
+    border: 1px solid #ccc;
 }
 
 .rg-left span,
@@ -277,7 +275,7 @@ Required for resize-element-handler
     top: 50%;
     margin: -10px 0 0 3.5px;
     height: 20px;
-    width: 7px
+    width: 7px;
 }
 
 .rg-bottom span,
@@ -286,7 +284,7 @@ Required for resize-element-handler
     left: 50%;
     margin: 3.5px 0 0 -10px;
     width: 20px;
-    height: 7px
+    height: 7px;
 }
 
 .rg-top {
@@ -294,7 +292,7 @@ Required for resize-element-handler
     width: 100%;
     top: 0;
     left: 0;
-    margin-top: -14px
+    margin-top: -14px;
 }
 
 .rg-right {
@@ -302,7 +300,7 @@ Required for resize-element-handler
     height: 100%;
     right: 0;
     top: 0;
-    margin-right: -14px
+    margin-right: -14px;
 }
 
 .rg-bottom {
@@ -310,7 +308,7 @@ Required for resize-element-handler
     width: 100%;
     bottom: 0;
     left: 0;
-    margin-bottom: -14px
+    margin-bottom: -14px;
 }
 
 .rg-left {
@@ -318,7 +316,7 @@ Required for resize-element-handler
     height: 100%;
     left: 0;
     top: 0;
-    margin-left: -14px
+    margin-left: -14px;
 }
 
 /* ==========================================================================
@@ -338,9 +336,6 @@ Stepwizard styles (editor instructions)
 
 .card-second-header {
     overflow-y: hidden;
-}
-
-.editor-sidebar-left, .card-second-header {
     overflow-x: hidden;
 }
 
@@ -376,12 +371,11 @@ Stepwizard styles (editor instructions)
     top: 14px;
     bottom: 0;
     position: absolute;
-    content: " ";
+    content: ' ';
     width: 100%;
     height: 1px;
     background-color: #ccc;
     z-order: 0;
-
 }
 
 .stepwizard-step {
@@ -420,7 +414,7 @@ Bootstrap 3.3.7 fix
 
     .modal-backdrop.in {
         filter: alpha(opacity=50);
-        opacity: .5;
+        opacity: 0.5;
     }
 
     .bootstrap-modal-fix {
